🐞 fix(menu): align nav entries to left on mobile menu

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ button {
 
     display: inline-flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 0.5em;
     
     transition: 0.1s;
